[metadata]
name = mdeng
version = 1.0.0
author = YouHeng Zhou
author_email = youhengzhou@cmail.carleton.ca
description = A package for a Python Markdown parser engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/youhengzhou/mdeng
project_urls =
    Bug Tracker = https://github.com/youhengzhou/mdeng/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
